foo-staging/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: foo-staging
  labels:
    istio-injection: enabled
