foo-staging/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: foo
  labels:
    app: foo

spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: foo
          image: "joaofnds/foo:0.2.0-dev.5"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - mountPath: "/etc/config"
              name: config
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: foo-staging-config
  strategy:
    canary:
      stableMetadata:
        labels:
          version: stable
      canaryMetadata:
        labels:
          version: canary
      analysis:
        startingStep: 2
        templates:
          - templateName: success-rate
      trafficRouting:
        istio:
          virtualService:
            name: foo
            routes:
              - primary
          destinationRule:
            name: foo
            stableSubsetName: stable
            canarySubsetName: canary
      steps:
        - setWeight: 10
        - pause:
            duration: 1m
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause:
            duration: 1m
        - setWeight: 60
        - pause:
            duration: 1m
        - setWeight: 80
        - pause:
            duration: 1m
