foo-staging/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: foo
  labels:
    app: foo

spec:
  selector:
    app: foo
  ports:
    - port: 80
      name: http
